# storage/api-docs/api-docs.json
@@ -3236,6 +3236,45 @@
                 ]
             }
         },
+        "/validatecommand": {
+            "post": {
+                "tags": [
+                    "Commande"
+                ],
+                "summary": "validate commande",
+                "description": "validate commande.",
+                "operationId": "validateCommand",
+                "parameters": [
+                    {
+                        "name": "command_id",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "404": {
+                        "description": "not found"
+                    }
+                },
+                "security": [
+                    {
+                        "Authorization": []
+                    }
+                ]
+            }
+        },
         "/addCoupon": {
             "post": {
                 "tags": [
@@ -7103,12 +7142,7 @@
                     "404": {
                         "description": "not found"
                     }
-                },
-                "security": [
-                    {
-                        "Authorization": []
-                    }
-                ]
+                }
             }
         },
         "/addimagesupplier": {
